login api end point

--- a/src/components/SignInCard/signincard.scss
+++ b/src/components/SignInCard/signincard.scss
@@ -63,8 +63,8 @@
       }
 
       .signup-text {
-        font-size: 14px;
-        color: #333;
+        font-size: 15px;
+        color: black;
 
         a {
           color: #191a55;
