--- a/src/Pages/dashboard/dashboard.scss
+++ b/src/Pages/dashboard/dashboard.scss
@@ -1,10 +1,10 @@
-.dashboardcontent{
-    display: flex;
-    justify-content:end;
-    padding: 20px 30px 0px 0px ;
-    gap: 8px;
-    h4{
-        display: flex;
-        align-items: center;
-    }
-}
+// .dashboardcontent{
+//     display: flex;
+//     justify-content:end;
+//     padding: 20px 30px 0px 0px ;
+//     gap: 8px;
+//     h4{
+//         display: flex;
+//         align-items: center;
+//     }
+// }
