--- a/src/components/common/input/input.scss
+++ b/src/components/common/input/input.scss
@@ -7,3 +7,17 @@ input[type="number"] {
     appearance: textfield; 
     -moz-appearance: textfield; 
   }
+
+
+.error{
+  color:red !important;
+  margin-top:10px;
+  margin-bottom: 0px !important;
+}
+
+
+.errorDate{
+  color:red !important;
+  margin-top: 2px;
+
+}
