--- a/src/Pages/dashboard/dashboard.scss
+++ b/src/Pages/dashboard/dashboard.scss
@@ -1,10 +1,17 @@
-// .dashboardcontent{
-//     display: flex;
-//     justify-content:end;
-//     padding: 20px 30px 0px 0px ;
-//     gap: 8px;
-//     h4{
-//         display: flex;
-//         align-items: center;
-//     }
-// }
+.checkinclock{
+    display: flex;
+    gap: 18px;
+    flex-direction: column;
+    align-items: center;
+    .checkinbtn{
+        display: flex;
+        gap: 30px;
+        .undefined{
+            width: 130px !important;
+        }
+        button{
+            padding: 18px 0px;
+            font-size: 15px;
+        }
+    }
+}
