--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -7,4 +7,9 @@
         display: flex;
         align-items: center;
     }
+    .logoutbtn{
+        display: flex;
+        color: red;
+        font-size: 17px;
+    }
 }
