--- a/src/Pages/dashboard/dashboard.scss
+++ b/src/Pages/dashboard/dashboard.scss
@@ -14,4 +14,9 @@
             font-size: 15px;
         }
     }
+    .tablecalendar{
+        padding: 20px;
+        border: 1px solid #ccc;
+        border-radius: 10px;
+    }
 }
