--- a/src/components/common/commonclock/commonclock.scss
+++ b/src/components/common/commonclock/commonclock.scss
@@ -1,7 +1,8 @@
 .clockmenu{
-    font-size: 17px;
+    font-size: 15px;
     border: 1px solid #ccc;
-    padding: 5px 0px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+    padding: 3px 0px;
     border-radius: 10px;
     width: 230px;
     justify-content: center;
