--- a/src/Layout.scss
+++ b/src/Layout.scss
@@ -1,13 +1,21 @@
-.ant-layout-sider{
-    background-color: #825c9a !important;
-    .ant-menu-dark{
-        background-color: #825c9a !important;
-    }
-    .ant-layout-sider-trigger{
-        background-color: #2E2E2E !important;
-    }
-    .ant-menu-item-selected{
-        background-color: #2E2E2E !important;
-        color: white;
-    }
+@import "./styles//main.scss";
+
+.ant-layout {
+  background: #fff;
+}
+.ant-layout-sider {
+  background-color: $sidemenuBg !important;
+  .ant-menu-dark {
+    background-color: $sidemenuBg !important;
+  }
+  .ant-layout-sider-trigger {
+    background-color: $sidemenubuttonBg !important;
+  }
+  .ant-menu-item-selected {
+    background-color: $sidemenubuttonBg !important;
+    color: $sidemenubuttonColor;
+  }
+  .anticon {
+    color: $sidemenubuttonColor;
+  }
 }
