--- a/src/components/common/commoncalender/commoncalender.scss
+++ b/src/components/common/commoncalender/commoncalender.scss
@@ -17,6 +17,35 @@
 .notes-month section {
   font-size: 28px;
 }
-.ant-radio-button{
+.ant-radio-button {
   display: none;
 }
+.ant-radio-button-wrapper:last-child {
+  display: none;
+}
+.ant-radio-button-wrapper-checked:first-child {
+  border-radius: 6px;
+}
+.ant-badge.ant-badge-status .ant-badge-status-text {
+  font-size: 11px !important;
+}
+.events .ant-badge-status {
+  overflow: inherit !important;
+  white-space: normal !important;
+}
+.ant-radio-group{
+  display: none;
+}
+.purple .ant-badge-status-dot {
+  background-color: purple !important;
+}
+.red .ant-badge-status-dot{
+  background-color: red !important;
+}
+.orange .ant-badge-status-dot{
+  background-color: orange !important;
+}
+.blue .ant-badge-status-dot{
+  background-color: blue !important;
+}
+
