--- a/src/components/common/commoncalender/commoncalender.scss
+++ b/src/components/common/commoncalender/commoncalender.scss
@@ -48,4 +48,7 @@
 .blue .ant-badge-status-dot{
   background-color: blue !important;
 }
+.black .ant-badge-status-dot{
+  background-color: black !important;
+}
 
