--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,15 +1,15 @@
-$primaryColor: #ede8dc;
+$primaryColor: white;
 $secondaryColor: #c1cfa1;
 
 $sidemenuBg: $primaryColor;
-$sidemenubuttonBg: $secondaryColor;
-$sidemenubuttonColor: black;
+$sidemenubuttonBg: #e8e4e4;
+$sidemenubuttonColor: rgb(70, 70, 70);
 
-$headerBg: $primaryColor;
+$headerBg: white;
 $headerColor:black;
 
-$mainlayoutBg: #ccc;
-$mainlayoutColor: #ccc;
-$mainlayoutBorder:#ccc;
+$mainlayoutBg: white;
+$mainlayoutColor: white;
+$mainlayoutBorder:white;
 
 
