--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -4,9 +4,18 @@
 }
 .dashboardcontent {
   display: flex;
-  justify-content: end;
-  padding: 15px 20px 15px 0px;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px 20px;
   gap: 8px;
+  z-index: 9;
+  position: relative;
+  // box-shadow: 0px 0px 8px 1px #ccc;
+  .logo {
+    img {
+      width: 130px;
+    }
+  }
   .profiledata {
     display: flex;
     gap: 8px;
