--- a/src/components/common/commonclock/commonclock.scss
+++ b/src/components/common/commonclock/commonclock.scss
@@ -1,12 +1,27 @@
+@import "/src/styles/main.scss";
+
 .clockmenu{
-    font-size: 15px;
+    // font-size: 15px;
     padding: 3px 0px;
     border-radius: 10px;
-    width: 220px;
+    width: 170px;
     justify-content: center;
-    display: flex
-    // background-color: #ccc;
+    display: flex;
+    .clockmenu-date{
+        font-size: 25px;
+        font-weight: 500;
+    }
+    .clockmenu-time{
+        font-size: 18px;
+    }
 }
-.clockmenu div{
-    margin: 10px 0px
+.header-timer{
+    height: 38px;
+    svg {
+    background-color: $secondaryColor;
+    padding: 6px;
+    border-radius: 50%;
+    font-size: 38px;
 }
+}
+ 
