--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,5 +1,5 @@
 $primaryColor: white;
-$secondaryColor: #c1cfa1;
+$secondaryColor: #f4f2f2;
 
 $sidemenuBg: $primaryColor;
 $sidemenubuttonBg: #e8e4e4;
