--- a/src/Pages/dashboard/dashboard.scss
+++ b/src/Pages/dashboard/dashboard.scss
@@ -1,14 +1,19 @@
+@import "../../styles/main.scss";
+
 .tablecalendar {
   padding: 10px;
   // border: 1px solid #ccc;
   border-radius: 10px;
+}
+.ant-layout {
+  font-size: 12px;
 }
 
 .dashboardmain {
   display: flex;
   max-width: 100%;
   .dashboardleft {
-    width: 75%;
+    width: 73%;
     padding: 0px 20px;
     .worklogcontainer {
       border-bottom: 1px solid #ccc;
@@ -23,8 +28,6 @@
           display: flex;
           align-items: center;
           font-size: 27px;
-          .header-timer {
-          }
         }
         .dashboard-content {
           h2 {
@@ -45,11 +48,14 @@
         display: flex;
         justify-content: space-around;
         align-items: center;
-        padding: 20px 0px;
+        padding: 25px 0px;
+        max-width: 100%;
         .checkincheckouttime {
           display: flex;
           align-items: center;
           gap: 10px;
+          width: 30%;
+          justify-content: center;
         }
         h2 {
           padding-bottom: 20px;
@@ -60,16 +66,26 @@
           font-size: 25px;
           font-weight: 500;
         }
-        .loginout-action {
-          width: 45px;
-          height: 45px;
-          background-color: #e8e4e4;
+        .login-action {
+          padding: 8px;
+          background-color: $secondaryColor;
           border-radius: 50%;
           display: flex;
           justify-content: center;
           align-items: center;
-          svg{
-            margin-right: 2px;
+          svg {
+            padding-right: 2px;
+          }
+        }
+        .logout-action {
+          padding: 8px;
+          background-color: $secondaryColor;
+          border-radius: 50%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          svg {
+            padding-left: 4px;
           }
         }
         .checkinouttime {
@@ -77,10 +93,14 @@
           font-size: 14px;
           font-weight: 500;
         }
+
         .productivityhours-content {
-          padding-top: 10px;
+          position: absolute;
+          bottom: -21px;
+          padding: 0;
+          // padding-top: 15px;
           .productivityhours {
-            font-size: 14px;
+            font-size: 12px;
             font-weight: 500;
           }
         }
@@ -94,6 +114,20 @@
       .right {
         display: flex;
         flex-direction: column;
+        width: 40%;
+        align-items: center;
+        position: relative;
+        .checkout-content {
+          padding: 13px;
+          // margin-top: 15px;
+          border: 1px solid #ccc;
+          border-radius: 50px;
+          display: flex;
+          width: max-content;
+          justify-content: center;
+          font-size: 15px;
+          font-weight: 500;
+        }
         button r {
           margin-top: 5px;
         }
@@ -106,11 +140,24 @@
     }
   }
   .dashboardright {
-    width: 25%;
+    width: 23%;
     border-left: 1px solid #ccc;
     padding: 20px 20px 0px 20px;
+    position: absolute;
+    right: 0;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    .worklog-container {
+      height: 42vh;
+      overflow: scroll;
+      padding: 10px 15px 15px 15px;
+      box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+      border-radius: 15px;
+    }
     .profilecard-container {
-      background-color: #f4f2f2;
+      background-color: $secondaryColor;
       padding: 30px;
       border-radius: 20px;
       .profiledata {
@@ -118,6 +165,11 @@
         flex-direction: column;
         align-items: center;
         gap: 7px;
+        .profilremployee-code{
+          display: flex;
+          justify-content: center;
+          padding-top: 7px;
+        }
         .profile-icons {
           display: flex;
           gap: 40px;
@@ -130,10 +182,11 @@
             padding: 10px;
           }
         }
-      }
-      h4 {
-        font-size: 16px;
-        padding-bottom: 10px;
+        h4 {
+          text-transform: capitalize;
+          font-size: 16px;
+          padding-bottom: 10px;
+        }
       }
     }
   }
