--- a/src/components/common/checkintoggle/checkintoggle.scss
+++ b/src/components/common/checkintoggle/checkintoggle.scss
@@ -65,7 +65,7 @@ body {
   top: 50%;
   width: 150px;
   height: 45px;
-  margin: -20px auto 0 auto;
+  // margin: -20px auto 0 auto;
   overflow: hidden;
 }
 
@@ -95,13 +95,13 @@ body {
 
 .layer {
   width: 100%;
-  background-color: #ebf7fc;
+  background-color: #d8f3dc;
   transition: 0.3s ease all;
   z-index: 1;
 }
-.button{
-  margin-top: 15px;
-}
+// .button{
+//   margin-top: 22px;
+// }
 
 /* Button 2 */
 #button-2 .knobs:before,
@@ -123,7 +123,7 @@ body {
 
   /*   line-height: 1; */
   padding: 9px 4px;
-  background-color: #03a9f4;
+  background-color: #52b788;
   border-radius: 50px;
   transition: 0.3s ease all;
 }
@@ -139,7 +139,7 @@ body {
 #button-2 .knobs:after {
   right: -128px;
   left: auto;
-  background-color: #f44336;
+  background-color: #dd2c2f;
 }
 
 #button-2 .checkbox:checked + .knobs:before {
