--- a/src/components/common/tablecalender/commoncalender.scss
+++ b/src/components/common/tablecalender/commoncalender.scss
@@ -65,7 +65,7 @@
   background-color: #0000ff73 !important;
 }
 .black .ant-badge-status-dot {
-  background-color: cyan !important;
+  background-color: #00ffff8f !important;
 }
 .ant-badge {
   position: unset !important;
