--- a/src/Pages/dashboard/dashboard.scss
+++ b/src/Pages/dashboard/dashboard.scss
@@ -138,6 +138,36 @@
         // font-weight: 500;
       }
     }
+    .calendar-legends{
+      display: flex;
+      justify-content: space-evenly;
+      padding-bottom: 30px;
+      .color{
+        height: 20px;
+        width: 20px;
+        border-radius: 5px;
+
+      }
+      .absent{
+        background-color: #ee0a0a85;
+      }
+      .present{
+        background-color: #52c41a59;
+      }
+      .weekend{
+        background-color: #ffa50066;
+      }
+      .weekendholiday{
+        background-color:#0000ff73;
+      }
+      .mandatory{
+        background-color: #cccccc7d;
+      }
+      .resricted{
+        background-color: #00ffff8f;
+      }
+      
+    }
   }
   .dashboardright {
     width: 23%;
@@ -151,10 +181,13 @@
     justify-content: space-between;
     .worklog-container {
       height: 42vh;
-      overflow: scroll;
-      padding: 10px 15px 15px 15px;
-      box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
-      border-radius: 15px;
+      overflow-x: hidden;
+    overflow-y: auto;
+      // overflow: scroll;
+      // padding: 10px 15px 15px 15px;
+      // box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+      // border-radius: 15px;
+      border-top: 1px solid #ccc;
     }
     .profilecard-container {
       background-color: $secondaryColor;
