--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,5 +1,5 @@
-$primaryColor: white;
-$secondaryColor: #f4f2f2;
+$primaryColor: #FDF9EA;
+$secondaryColor: #F6C243;
 
 $sidemenuBg: $primaryColor;
 $sidemenubuttonBg: #e8e4e4;
