--- a/src/Pages/dashboard/dashboard.scss
+++ b/src/Pages/dashboard/dashboard.scss
@@ -190,7 +190,7 @@
       border-top: 1px solid #ccc;
     }
     .profilecard-container {
-      background-color: $secondaryColor;
+      background-color: $primaryColor;
       padding: 30px;
       border-radius: 20px;
       .profiledata {
@@ -207,12 +207,16 @@
           display: flex;
           gap: 40px;
           .profile-action {
-            background-color: white;
+            background-color: $secondaryColor;
             border-radius: 50%;
             display: flex;
             justify-content: center;
             align-items: center;
-            padding: 10px;
+            padding: 11px;
+            svg{
+              width: 19px;
+              height: 19px;
+            }
           }
         }
         h4 {
