add employee create 24-APR

--- a/src/Layout.scss
+++ b/src/Layout.scss
@@ -4,9 +4,9 @@
   background: #fff;
 }
 .ant-layout-sider {
-  background-color: $sidemenuBg !important;
+  background-color: white !important;
   .ant-menu-dark {
-    background-color: $sidemenuBg !important;
+    background-color: white !important;
   }
   .ant-layout-sider-trigger {
     background-color: $sidemenubuttonBg !important;
