--- a/src/components/common/button/button.scss
+++ b/src/components/common/button/button.scss
@@ -1,16 +1,17 @@
 .primary {
   button {
-    background-color: #9f51cf;
+    background-color: #E8E4E4;
     border-radius: 6px;
-    border: 1px solid #825c9a;
+    border: 1px solid #E8E4E4;
+    box-shadow: unset;
 
     span {
-      color: white;
+      color: black;
     }
   }
   button:hover {
-    background-color: #a96bd0 !important;
-    border: 1px solid #825c9a !important;
+    background-color: #e8e4e4f1 !important;
+    border: 1px solid #e8e4e4f1!important;
   }
   button:disabled {
     span {
