--- a/src/Pages/dashboard/dashboard.scss
+++ b/src/Pages/dashboard/dashboard.scss
@@ -223,6 +223,7 @@
           text-transform: capitalize;
           font-size: 16px;
           padding-bottom: 10px;
+          text-align: center;
         }
       }
     }
