--- a/src/components/common/input/input.scss
+++ b/src/components/common/input/input.scss
@@ -1,3 +1,28 @@
+// input[type=number]::-webkit-outer-spin-button,
+// input[type=number]::-webkit-inner-spin-button {
+//   -webkit-appearance: none;
+//   margin: 0;
+// }
+// input[type="number"] {
+//     appearance: textfield; 
+//     -moz-appearance: textfield; 
+//   }
+
+
+// .error{
+//   color:red !important;
+//   margin-top:10px;
+//   margin-bottom: 0px !important;
+// }
+
+
+// .errorDate{
+//   color:red !important;
+//   margin-top: 2px;
+
+// }
+
+
 input[type=number]::-webkit-outer-spin-button,
 input[type=number]::-webkit-inner-spin-button {
   -webkit-appearance: none;
@@ -13,6 +38,11 @@ input[type="number"] {
   color:red !important;
   margin-top:10px;
   margin-bottom: 0px !important;
+}
+
+.error-text{
+  color:red !important;
+  
 }
 
 
