--- a/src/global.css
+++ b/src/global.css
@@ -1,15 +1,17 @@
 @import url("https://fonts.googleapis.com/css2?family=Albert+Sans:ital,wght@0,100..900;1,100..900&family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap");
 
-*{
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+  user-select: text !important;
 }
-:root{
-    font-family: "Plus Jakarta Sans", sans-serif;
+:root {
+  font-family: "Plus Jakarta Sans", sans-serif;
+  user-select: text !important;
 }
-.page-center{
-    /* max-width: 1440px; */
-    width: 100%;
-    margin: 0 auto;
+.page-center {
+  /* max-width: 1440px; */
+  width: 100%;
+  margin: 0 auto;
 }
